# hyperliquid_hedger

./: Cargo.toml  README.md
config/: bot.toml
src/: lib.rs
src/api/: account_api.rs  auth.rs  mod.rs  trading_api.rs  types.rs  ws_trading.rs
src/clients/: hl_client.rs  mod.rs  ws_client.rs  ws_manager.rs
src/config/: api_config.rs  bot_config.rs  mod.rs  risk_config.rs  strategy_config.rs
src/datastructures/: mod.rs  tob.rs  tob_cache.rs
src/events/: event_bus.rs  mod.rs  types.rs
src/model/: hl_msgs.rs  mod.rs
src/strategies/: base_strategy.rs  market_making.rs  mod.rs
src/trading/: mod.rs  order_book.rs  order_manager.rs  position_manager.rs  risk_manager.rs  types.rs
src/ui/: app.rs  mod.rs
src/ui/components/: connection_indicator.rs  mod.rs  order_table.rs  price_display.rs
src/ui/panels/: logs_panel.rs  mod.rs  order_book_panel.rs  positions_panel.rs  strategy_panel.rs  trading_panel.rs
src/utils/: mod.rs  ws_utils.rs
