[package]
name = "hyper_liquid_connector"
version = "0.1.0"
edition = "2021"

[dependencies]
yawc = { version = "0.1", features = ["reqwest"] }
futures = { version = "0.3.31", default-features = false, features = ["std"] }
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "rustls-tls-webpki-roots", "json"] }
tokio = { version = "1.41.1", features = ["full"] }
anyhow = "1.0.97"
tokio-rustls = "0.26.2"
webpki-roots = "0.26.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1"
tracing-subscriber = "0.3"
rustls = { version = "0.23.31", features = ["ring"] }
# UI dependencies
eframe = "0.32.2"
egui = "0.32.2"
egui_plot = "0.33.0"
# Trading dependencies
ordmap = "1.1.0"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
rust_decimal_macros = "1.33"
# Concurrency dependencies
dashmap = "5.5"
crossbeam = "0.8"
crossbeam-channel = "0.5"
parking_lot = "0.12"
# Additional dependencies
toml = "0.8"
hex = "0.4"
sha2 = "0.10"
url = "2.5"

[[bin]]
path = "src/bin/main.rs"
name = "hl-conn-rs"

[[bin]]
path = "src/bin/gui.rs"
name = "hl-gui"

[[bin]]
path = "src/bin/trading_bot.rs"
name = "hl-trading-bot"
